k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faceit-heat
  namespace: faceit
  labels:
    app: faceit-heat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faceit-heat
  template:
    metadata:
      labels:
        app: faceit-heat
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: faceit-heat
          image: ghcr.io/nic-ilow/faceit-heat-app:latest
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 30
